# dahua-mcp

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  cameras.example.json  cameras.example.yaml  fastmcp.json  pyproject.toml  run_server.py
.github/: dependabot.yml
.github/workflows/: auto-release.yml  python-app.yml
src/dahua_mcp/: dahua_client.py  dahua_middlewares.py  dahua_tools.py  models.py  server.py  utils.py
tests/: test_client.py  test_utils.py
